2007-04-27 [colin]	2.9.1cvs29

	* src/imap.c
		Fix build without libetpan (my bad!)

2007-04-26 [colin]	2.9.1cvs28

	* src/imap.c
	* src/imap.h
		Fix uselessly exported function
	* src/textview.c
		Consider "- -- \n" as signature separator
		(that's what signature separators look like
		 in PGP/Inline signed mails)

2007-04-26 [colin]	2.9.1cvs27

	* configure.ac
		libetpan-0.49 is now required
	* src/procmime.c
		Fix double fetching of mails if
		first try failed
	* src/imap.c
		Make offline sync faster, by
		remembering last change time, and
		last sync time.

2007-04-26 [hoa]	2.9.1cvs26

	* src/imap.c
	* src/imap.h
	* src/mainwindow.c
	* src/toolbar.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		cancellation of IMAP operations is now allowed.
		Fixes bug 1056, 'Possibility to 'cancel transfer' in IMAP'

2007-04-26 [colin]	2.9.1cvs25

	* src/folder.c
		Always fetch body+headers in folders that are
		synched for offline use, if "Synchronise as
		soon as possible" is set.
		Fixes bug 1200, 'Add option to always retrieve full 
		messages'

2007-04-25 [colin]	2.9.1cvs24

	* src/compose.c
		Fix bug 1198, 'Reply-all "disappearing" address bug 
		persists...'

2007-04-24 [colin]	2.9.1cvs23

	* src/folderview.c
		Fix bug 1195, 'Hardware key navigation' 
		Make GDK_Enter toggle expansion (Maemo)

2007-04-24 [wwp]	2.9.1cvs22

	* src/compose.c
		Fix few compiler warnings.

2007-04-24 [paul]	2.9.1cvs21

	* src/Makefile.am
	* src/stock_pixmap.c
	* src/stock_pixmap.h
		complete last commit

2007-04-24 [paul]	2.9.1cvs20

	* src/gtk/about.c
	* src/pixmaps/active.xpm
	* src/pixmaps/checkbox_off.xpm
	* src/pixmaps/checkbox_on.xpm
	* src/pixmaps/inactive.xpm
		kick out the blobs
		remove transparent border from checkbox icons

2007-04-24 [wwp]	2.9.1cvs19

	* src/textview.c
	* src/textview.h
		Fix a crash in textview, thanks to Colin.

2007-04-23 [wwp]	2.9.1cvs18

	* src/prefs_common.c
		Fix 2.9.1cvs5: no header was being translated at all.

2007-04-23 [colin]	2.9.1cvs17
