@@ -2557,3 +2557,4 @@
 ( cvs diff -u -r 1.654.2.2610 -r 1.654.2.2611 configure.ac;  cvs diff -u -r 1.49.2.91 -r 1.49.2.92 src/procmime.c;  cvs diff -u -r 1.179.2.167 -r 1.179.2.168 src/imap.c;  ) > 2.9.1cvs27.patchset
 ( cvs diff -u -r 1.179.2.168 -r 1.179.2.169 src/imap.c;  cvs diff -u -r 1.34.2.15 -r 1.34.2.16 src/imap.h;  cvs diff -u -r 1.96.2.170 -r 1.96.2.171 src/textview.c;  ) > 2.9.1cvs28.patchset
 ( cvs diff -u -r 1.179.2.169 -r 1.179.2.170 src/imap.c;  ) > 2.9.1cvs29.patchset
+( cvs diff -u -r 1.274.2.186 -r 1.274.2.187 src/mainwindow.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/prefs_logging.c;  ) > 2.9.1cvs30.patchset
